--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -5,6 +5,23 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}"><i class="icon-speedometer"></i> Dashboard</a>
             </li>
+            {% if logged_in_as_student in students %}
+            
+            <li class="nav-item nav-dropdown">
+            
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="nav-icon icon-puzzle"></i> Edit Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'students:attendance_count' %}">
+                            <i class="nav-icon icon-puzzle"></i> Attendance</a>
+                    </li>
+                  
+                
+            </li>
+            <div class=" d-none ">  
+
             <li class="nav-item nav-dropdown">
                 <a class="nav-link nav-dropdown-toggle" href="#">
                     <i class="nav-icon icon-user"></i> Student</a>
@@ -37,6 +54,41 @@
                     </li>
                 </ul>
             </li>
+                </div>
+                {% else %}
+                <li class="nav-item nav-dropdown">
+                    <a class="nav-link nav-dropdown-toggle" href="#">
+                        <i class="nav-icon icon-user"></i> Student</a>
+                    <ul class="nav-dropdown-items">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'students:student_list' %}">
+                                <i class="nav-icon icon-puzzle"></i> Student List</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'students:attendance_count' %}">
+                                <i class="nav-icon icon-puzzle"></i> Attendance</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'students:student_regi' %}">
+                                <i class="nav-icon icon-puzzle"></i> Registration</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item nav-dropdown">
+                    <a class="nav-link nav-dropdown-toggle" href="#">
+                        <i class="nav-icon icon-user"></i> Teachers</a>
+                    <ul class="nav-dropdown-items">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'teachers:teacher_list' %}">
+                                <i class="nav-icon icon-puzzle"></i> Teacher List</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'teachers:create_teacher' %}">
+                                <i class="nav-icon icon-puzzle"></i> Create New Teacher</a>
+                        </li>
+                    </ul>
+                </li>
+            {% endif %}
         </ul>
     </nav>
     <button class="sidebar-minimizer brand-minimizer" type="button"></button>
