--- a/templates/students/student_list.html
+++ b/templates/students/student_list.html
@@ -57,7 +57,7 @@
     <div class="pagination">
         <span class="step-links">
 
-            {% if students.has_previous %}
+            {% if  articles.has_previous %}
               
                 <a style="text-decoration: none;" class="position-relative " href="?page={{ articles.previous_page_number }}"> 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
@@ -73,10 +73,10 @@
             {% endif %}
 
             <span class="position-relative " style="font-weight: 600; margin-left: 0.8cm; margin-right: 0.8cm;">
-                 {{ students.number }} of {{ students.paginator.num_pages }} 
+                 {{  articles.number }} of {{  articles.paginator.num_pages }} 
             </span>    
 
-            {% if students.has_next %}
+            {% if  articles.has_next %}
                 <a style="text-decoration: none;"class="position-relative " href="?page={{ articles.next_page_number }}">
                     next <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
