--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -22,39 +22,39 @@
             </li>
             <div class=" d-none ">  
 
-            <li class="nav-item nav-dropdown">
-                <a class="nav-link nav-dropdown-toggle" href="#">
-                    <i class="nav-icon icon-user"></i> Student</a>
-                <ul class="nav-dropdown-items">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'students:student_list' %}">
-                            <i class="nav-icon icon-puzzle"></i> Student List</a>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-user"></i> Student</a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'students:student_list' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Student List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'students:attendance_count' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Attendance</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'students:student_regi' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Registration</a>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'students:attendance_count' %}">
-                            <i class="nav-icon icon-puzzle"></i> Attendance</a>
+                    <li class="nav-item nav-dropdown">
+                        <a class="nav-link nav-dropdown-toggle" href="#">
+                            <i class="nav-icon icon-user"></i> Teachers</a>
+                        <ul class="nav-dropdown-items">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'teachers:teacher_list' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Teacher List</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'teachers:create_teacher' %}">
+                                    <i class="nav-icon icon-puzzle"></i> Create New Teacher</a>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'students:student_regi' %}">
-                            <i class="nav-icon icon-puzzle"></i> Registration</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item nav-dropdown">
-                <a class="nav-link nav-dropdown-toggle" href="#">
-                    <i class="nav-icon icon-user"></i> Teachers</a>
-                <ul class="nav-dropdown-items">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'teachers:teacher_list' %}">
-                            <i class="nav-icon icon-puzzle"></i> Teacher List</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'teachers:create_teacher' %}">
-                            <i class="nav-icon icon-puzzle"></i> Create New Teacher</a>
-                    </li>
-                </ul>
-            </li>
-                </div>
+                        </div>
                 {% else %}
                 <li class="nav-item nav-dropdown">
                     <a class="nav-link nav-dropdown-toggle" href="#">
@@ -66,7 +66,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'students:attendance_count' %}">
-                                <i class="nav-icon icon-puzzle"></i> Attendance</a>
+                                <i class="nav-icon icon-puzzle"></i> Attendance XXX</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'students:student_regi' %}">
