--- a/templates/students/student_details.html
+++ b/templates/students/student_details.html
@@ -72,7 +72,7 @@
                 <tbody>
                     <tr>
                         {% for i in single_student.modules.all %}
-                        <td> <span style="font-weight: 500;">{{i.module_instructor.name.get_full_name}}</span>  - {{i}}</td>
+                        <td> <span style="font-weight: 500;">{{i.teacherinfo_set.full_name}}</span>  - {{i}}</td>
                         <br>
                         {% empty %}
                             No Lecturers Assigned yet
