teacher can add sessions

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -42,7 +42,7 @@
                                                       <li style="padding: 15px;">  <strong>Register as ... </strong></li>  
                                                       <li><a class="dropdown-item" href="{% url 'students:register' %}">Student</a></li>
                                                       <li><a class="dropdown-item" href="{% url 'teachers:register' %}"> Teacher</a></li>
-                                                      <li><a class="dropdown-item" href="#">Admin</a></li>
+                                                      <li><a class="dropdown-item" href="{% url 'admins:register' %}">Admin</a></li>
                                                     </ul>
                                                   </div>
                                             </span>
