--- a/templates/base/sidebar.html
+++ b/templates/base/sidebar.html
@@ -73,8 +73,8 @@
                                 <i class="nav-icon icon-puzzle"></i> Attendance </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'students:student_regi' %}">
-                                <i class="nav-icon icon-puzzle"></i> Registration</a>
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon icon-puzzle"></i> Add A Session</a>
                         </li>
                     </ul>
                 </li>
@@ -88,10 +88,7 @@
                                 <a class="nav-link" href="{% url 'students:student_list' %}">
                                     <i class="nav-icon icon-puzzle"></i> Student List</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'students:attendance_count' %}">
-                                    <i class="nav-icon icon-puzzle"></i> Attendance </a>
-                            </li>
+                            
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'students:student_regi' %}">
                                     <i class="nav-icon icon-puzzle"></i> Registration</a>
