--- a/templates/teachers/single_teacher.html
+++ b/templates/teachers/single_teacher.html
@@ -2,55 +2,42 @@
 {% load static %}
 
 {% block content %}
+<div class="container-fluid" style="width: 100%;">
 
+<br>
 <div class="row">
     <div class="col-lg-7">
         <div class="card">
             <div class="card-header">
-                 <i class="fa fa-align-justify"></i> Teacher Information
+                 <i class="fa fa-align-justify"></i>  Lecturer Personal Info
             </div>
             <div class="card-body">
                 <tbody>
                     <tr>
-                        <td>Full Name: {{ single_teacher.name }}</td>
+                        <td>Full Name: {{ single_teacher.full_name }}</td>
                         <br>
-                        <td>Email: {{ single_teacher.email }}</td>
+                        <td>Email: {{ single_teacher.teacher_email }}</td>
                         <br>
-                        <td>Age: {{ single_teacher.age }}</td>
+                        <td>Lecturer Cellphone: {{ single_teacher.teacher_cellphone}}</td>
                         <br>
                         <td>Gender: {{ single_teacher.gender }}</td>
                         <br>
-                        <td>Joining Date: {{ single_teacher.joining_date }}</td>
-                        <br>
-                        <td>Passing Year: {{ single_teacher.passing_year }}</td>
                     </tr>
                 </tbody>
             </div>
         </div>
     </div>
+
     <div class="col-lg-5">
         <div class="card">
             <div class="card-header">
-                 <i class="fa fa-align-justify"></i> Teachers Personal Info
+                 <i class="fa fa-align-justify"></i> Lecturer Academic Info
             </div>
             <div class="card-body">
 
-                <h6>Department: {{ single_teacher.dept_type }}</h6>
-                <h6>Subject: {{ single_teacher.sub_type }}</h6>
-                <h6>Salary: {{ single_teacher.salary }} </h6>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-5">
-        <div class="card">
-            <div class="card-header">
-                 <i class="fa fa-align-justify"></i> Teachers Personal Info
-            </div>
-            <div class="card-body">
-
-                <h6>Department: {{ single_teacher.dept_type }}</h6>
-                <h6>Subject: {{ single_teacher.sub_type }}</h6>
-                <h6>Salary: {{ single_teacher.salary }} </h6>
+                <h6>Faculty: {{ single_teacher.Faculty }}</h6>
+                <h6>Module: {{ single_teacher.module.module_name}}</h6>
+             
             </div>
         </div>
     </div>
@@ -69,5 +56,6 @@
     </div>
 </div>
 
+</div>
 {% endblock %}
 
